# avro_poc

./: Cargo.toml  README.md
benches/: benchmark.rs
src/: error.rs  lib.rs  schema.rs  ser.rs  utils.rs
