[package]
name = "avro_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { git = "https://github.com/apache/avro", branch = "master" }
integer-encoding = "3"
thiserror = "1"
self_cell = "0.10"
serde = "1"
strum = { version = "0.24", features = ["derive"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false
